--- a/preview/button-directive/angular/components/button/button.component.scss
+++ b/preview/button-directive/angular/components/button/button.component.scss
@@ -7,6 +7,7 @@
     align-items: center;
     cursor: pointer;
     justify-content: center;
+    width: fit-content;
 
     &:focus-visible {
         outline: 1px solid var(--border-brand-focused);
