--- a/packages/react/src/components/modal/Modal.module.scss
+++ b/packages/react/src/components/modal/Modal.module.scss
@@ -17,12 +17,12 @@
 
 .modal-container {
   @include elevation-neutral-shadow-4;
+  border: none;
   box-sizing: border-box;
   position: absolute;
   max-height: 90vh;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0.98);
+  transform: translateY(-50%) scale(0.98);
   display: flex;
   width: 496px;
   padding: $positive-spacing_300;
@@ -36,7 +36,7 @@
 
   &[data-open='true'] {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translateY(-50%) scale(1);
   }
 
   &[data-size='s'] {
