--- a/preview/dsr-184/angular/components/modal/modal.component.scss
+++ b/preview/dsr-184/angular/components/modal/modal.component.scss
@@ -17,6 +17,7 @@
 
 .rte-modal-container {
   @include elevation-neutral-shadow-4;
+  border: none;
   box-sizing: border-box;
   position: absolute;
   max-height: 90vh;
