fix(link): add spacing with external icon + set outline border inverse color in dark mode

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.scss
@@ -117,7 +117,7 @@
             &:focus-visible {
                 color: var(--content-primary-inverse);
                 text-decoration: underline;
-                outline: 1px solid var(--border-brand-focused);
+                outline: 1px solid var(--border-inverse);
                 outline-offset: $radius-s;
                 border-radius: $radius-s;
             }
@@ -138,9 +138,14 @@
         &:focus-visible {
             color: var(--content-primary-inverse);
             text-decoration: underline;
-            outline: 1px solid var(--border-brand-focused);
+            outline: 1px solid var(--border-inverse);
             outline-offset: $radius-s;
             border-radius: $radius-s;
         }
+    }
+
+    .rte-link-external-icon {
+        align-self: start;
+        margin-left: $positive-spacing_025;
     }
 }
