--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
@@ -9,5 +9,10 @@
   <span class="rte-link-label">
     {{ label() }}
   </span>
-  <rte-icon *ngIf="externalLink()" name="external-link" [size]="12"></rte-icon>
+  <rte-icon
+    *ngIf="externalLink()"
+    name="external-link"
+    style="align-self: start; margin-left: 2px"
+    [size]="12"
+  />
 </a>
