--- a/angular/components/link/link.component.html
+++ b/angular/components/link/link.component.html
@@ -1,6 +1,18 @@
-<a href="{{ href() }}" class="rte-link" role="link" [ngClass]="{'subtle': subtle()}" [target]="externalLink() ? '_blank' : undefined" [rel]="externalLink() ? 'noopener noreferrer' : null">
-    <span class="rte-link-label">
-        {{ label() }}
-    </span>
-    <rte-icon *ngIf="externalLink()" name="external-link" [size]="12"></rte-icon>
+<a
+  href="{{ href() }}"
+  class="rte-link"
+  role="link"
+  [ngClass]="{ subtle: subtle(), reverse: reverse() }"
+  [target]="externalLink() ? '_blank' : undefined"
+  [rel]="externalLink() ? 'noopener noreferrer' : null"
+>
+  <span class="rte-link-label">
+    {{ label() }}
+  </span>
+  <rte-icon
+    *ngIf="externalLink()"
+    name="external-link"
+    style="align-self: start; margin-left: 2px"
+    [size]="12"
+  />
 </a>
