--- a/angular/components/button/button.component.html
+++ b/angular/components/button/button.component.html
@@ -1,10 +1,3 @@
-<button
-    class="rte-button {{ variant() }} size-{{ size() }}"
-    [attr.aria-label]="ariaLabel()"
-    [attr.aria-labelledby]="ariaLabelledBy()"
-    [attr.type]="buttonType()"
-    [disabled]="disabled()"
-    (click)="onClick($event)"
->
-    <span class="rte-button-label">{{ label() }}</span>
-</button>
+<span class="rte-button-label">
+    <ng-content/>
+</span>
