--- a/angular/components/link/link.component.scss
+++ b/angular/components/link/link.component.scss
@@ -149,3 +149,11 @@
         margin-left: $positive-spacing_025;
     }
 }
+
+.rte-link {
+    .rte-link-label {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+}
