--- a/angular/components/divider/divider.component.scss
+++ b/angular/components/divider/divider.component.scss
@@ -1,12 +1,12 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
-.horizontal{
+.horizontal {
     border: none;
     padding: 0;
     margin: 0;
     width: 100%;
 
-    &.round{
+    &.round {
         border-radius: $radius-pill;
     }
 
@@ -24,6 +24,10 @@
 
     &.inverse {
         border-top-color: var(--border-inverse);
+    }
+
+    &.brand {
+        border-top-color: var(--border-brand-default);
     }
 }
 
@@ -51,5 +55,9 @@
 
     &.inverse {
         background-color: var(--border-inverse);
+    }
+
+    &.brand {
+        background-color: var(--border-brand-default);
     }
 }
