--- a/packages/react/src/components/sideNav/SideNav.module.scss
+++ b/packages/react/src/components/sideNav/SideNav.module.scss
@@ -1,7 +1,6 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
 .sideNavContainer {
-    width: 200px;
     height: 100%;
     border-right: 1px solid var(--color-border-primary);
     padding: $positive-spacing_0;
@@ -10,8 +9,7 @@
 }
 
 .sideNav {
-    background-color: var(--background-brand-default);
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -26,31 +24,45 @@
 
 .sideNavHeader {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 48px;
-    padding: $positive-spacing_050;
-    background-color: var(--background-brand-default);
+    padding: $positive-spacing_250 $positive-spacing_100 $positive-spacing_050 $positive-spacing_100;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: $positive-spacing_050;
+    flex: 1 0 0;
+    align-self: stretch;
+    
+    .sideNavHeaderTitle {
+        display: flex;
+        padding: $positive-spacing_0 $positive-spacing_100;
+        align-items: center;
+        gap: $positive-spacing_100;
+        flex: 1 0 0;
+        align-self: stretch;
+
+        h1 {
+            @include typography-heading-xs;
+            user-select: none;
+        }
+    }
 }
 
 .sideNavBody {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
+    box-sizing: border-box;
     padding: $positive-spacing_200 $positive-spacing_100;
     background-color: var(--content-secondary);
 }
 
 .sideNavFooter {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     width: 100%;
     padding: $positive-spacing_100;
-    background-color: teal;
 }
 
 .collapsibleSection {
