--- a/packages/react/src/components/sideNav/navMenu/NavMenu.module.scss
+++ b/packages/react/src/components/sideNav/navMenu/NavMenu.module.scss
@@ -30,6 +30,11 @@
                 color: inherit;
             }
         }
+
+        &:focus-visible {
+            outline: 1px solid var(--border-brand-focused);
+            outline-offset: 0;
+        }
     }
 
     &.collapsed {
