--- a/packages/react/src/components/sideNav/baseSideNav/BaseSideNav.module.scss
+++ b/packages/react/src/components/sideNav/baseSideNav/BaseSideNav.module.scss
@@ -18,7 +18,7 @@
     gap: $positive-spacing_0;
     overflow: hidden;
     box-sizing: border-box;
-    border-radius: var(--border-radius-0);
+    border-radius: 0;
     transition: min-width 300ms;
     color: var(--content-brand-navigation-default);
     &.neutral {
