--- a/packages/react/src/components/sideNav/navItem/NavItem.module.scss
+++ b/packages/react/src/components/sideNav/navItem/NavItem.module.scss
@@ -17,6 +17,18 @@
         &:hover {
             background: var(--background-neutral-navigation-hover);
         }
+
+        &:active {
+            @include elevation-neutral-inner-shadow;
+        }
+        &.focused {
+            outline: none;
+        }
+
+        &.nested {
+            border-radius: 0 $radius-s $radius-s 0;
+            border-left: $width-s solid var(--border-brand-navigation-divider);   
+        }
     }
 
     &:hover {
