--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.scss
@@ -1,33 +1,6 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
-.sideNavContainer {
-    height: 100%;
-    border-right: 1px solid var(--color-border-primary);
-    padding: $positive-spacing_0;
-    position: relative;
-    display: flex;
-}
-
-.sideNav {
-    min-height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: $positive-spacing_0;
-    overflow: hidden;
-    box-sizing: border-box;
-    border-radius: 0;
-    transition: min-width 300ms;
-    position: relative;
-
-    &.neutral {
-        background-color: red;
-    }
-}
-
-.sideNavHeaderContainer {
+.side-nav-header-container {
     display: flex;
     padding: $positive-spacing_050;
     flex-direction: column;
@@ -46,7 +19,7 @@
     }
 }
 
-.sideNavHeader {
+.side-nav-header {
     display: flex;
     position: relative;
     padding: $positive-spacing_250 $positive-spacing_100;
@@ -65,21 +38,21 @@
         flex: 1 0 0;
         align-self: stretch;
 
-        .sideNavHeaderTitleContainer {
+        .side-nav-header-title-container {
             padding: $positive-spacing_100;
             justify-content: center;
             align-items: center;
             flex-grow: 0;
             gap: 0;
             align-self: auto;
-            .sideNavHeaderTitle {
+            .side-nav-header-title {
                 gap: 0;
             }
         }
     }
 
     &.neutral {
-        .sideNavHeaderTitleContainer {
+        .side-nav-header-title-container {
             &[href],
             &[role="button"] {
                 &:hover {
@@ -90,7 +63,7 @@
         }
     }
 
-    .sideNavHeaderTitleContainer {
+    .side-nav-header-title-container {
         display: flex;
         padding: $positive-spacing_0 $positive-spacing_100;
         align-items: center;
@@ -111,12 +84,12 @@
             }
         }
 
-        .sideNavHeaderTitle {
+        .side-nav-header-title {
             display: flex;
             align-items: center;
             gap: $positive-spacing_100;
 
-            .sideNavHeaderIdentifier {
+            .side-nav-header-identifier {
                 @include typography-text-s-bold;
                 display: flex;
                 flex-direction: column;
@@ -150,7 +123,7 @@
         }
     }
 
-    .sideNavHeaderVersion {
+    .side-nav-header-version {
         display: flex;
         position: absolute;
         bottom: $positive-spacing_050;
@@ -175,7 +148,7 @@
     }
 }
 
-.sideNavBody {
+.side-nav-body {
     display: flex;
     padding: $positive-spacing_200 $positive-spacing_100;
     flex-direction: column;
@@ -196,10 +169,10 @@
     }
 }
 
-.sideNavFooterContainer {
+.side-nav-footer-container {
     padding: $positive-spacing_100;
 
-    .sideNavFooter {
+    .side-nav-footer {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -210,7 +183,7 @@
     }
 }
 
-.collapsibleSection {
+.collapsible-section {
     display: flex;
     padding: $positive-spacing_050 $positive-spacing_0;
     flex-direction: column;
@@ -225,3 +198,4 @@
         box-sizing: border-box;
     }
 }
+
