--- a/packages/react/src/components/sideNav/baseSideNav/BaseSideNav.module.scss
+++ b/packages/react/src/components/sideNav/baseSideNav/BaseSideNav.module.scss
@@ -1,7 +1,6 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
 .sideNavContainer {
-    width: 200px;
     height: 100%;
     border-right: 1px solid var(--color-border-primary);
     padding: $positive-spacing_0;
@@ -9,10 +8,14 @@
     display: flex;
 }
 
+.sideNavContent {
+    flex: 0 1 auto;
+    align-self: flex-start;
+}
+
 .sideNav {
     background-color: var(--background-brand-navigation-default);
     min-height: 100%;
-    width: 100%;
     display: flex;
     flex-direction: column;
     gap: $positive-spacing_0;
