--- a/preview/dsr-184/angular/components/modal/modal.component.scss
+++ b/preview/dsr-184/angular/components/modal/modal.component.scss
@@ -22,8 +22,7 @@
   position: absolute;
   max-height: 90vh;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0.98);
+  transform: translateY(-50%) scale(0.98);
   display: flex;
   width: 496px;
   padding: $positive-spacing_300;
@@ -37,7 +36,7 @@
 
   &[data-open='true'] {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translateY(-50%) scale(1);
   }
 
   &[data-size='s'] {
