--- a/angular/components/textarea/textarea.component.scss
+++ b/angular/components/textarea/textarea.component.scss
@@ -1,6 +1,12 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
+:host {
+  width: 100%;
+}
+
 .container {
+  width: 100%;
+
   &[data-label-position='side'] {
     display: flex;
     flex-direction: row;
@@ -18,6 +24,7 @@
   flex-shrink: 0;
   border-radius: $radius-none;
   opacity: $opacity-100;
+  width: 100%;
 
   &[data-label-position='side'] {
     flex-grow: 1;
