feat (side navigation): add footer items

--- a/packages/react/src/components/sideNav/SideNav.module.scss
+++ b/packages/react/src/components/sideNav/SideNav.module.scss
@@ -207,6 +207,24 @@
     }
 }
 
+.sideNavFooterItems {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: $positive-spacing_100;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: $positive-spacing_100;
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        box-sizing: border-box;
+    }
+}
+
 .collapsibleSection {
     display: flex;
     padding: $positive-spacing_050 $positive-spacing_0;
